<resources>
    <string name="app_name">ScoutNet Client</string>
    <string name="app_version">Version Alpha 1.0</string>
    <string name="createdCodedBy">Created and Coded By:</string>
    <string name="matthewM">Matthew Martin</string>

    <string name="teamNameTitle">Team Name</string>
    <string name="teamNumberTitle">Team Number</string>
    <string name="teamAwesomeTitle">Is Team Awesome?</string>
    <string name="robotNameTitle">Robot Name</string>
    <string name="driverNumberTitle">Number of Drivers</string>
    <string name="matchNumberTitle">Match Number</string>

    <!--Action Bar Titles-->
    <string name="menuSettings">Settings</string>
    <string name="menuSubmitData">Submit Data</string>

    <!--Preference Keys-->
    <string name="preference_file_key">org.team2635.scoutnetclient.preferencefile</string>

    <!-- Dialog Titles -->
    <string name="dialog_upload_prompt">Upload Data?</string>
    <string name="dialog_success">Success!</string>

    <!--Dialog Buttons -->
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>

    <!--Activity Titles-->
    <string name="basicInfoPageTitle">Basic info</string>
    <string name="title_activity_activity_pitscouting">Pit Scouting</string>
    <string name="title_activity_activity_settings">Settings</string>
    <string name="title_activity_activity_fieldscouting">Field Scouting</string>

    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown</string>

    <string name="canTheRobot">Can the robot</string>
    <string name="doesRobotCheckAll">Does the robot (Check all that apply)</string>
    <string name="generalStrategyNotes">General Strategy Notes</string>

    <!--Defense Names-->
    <string name="A1">Portcullis</string>
    <string name="A2">Cheval de Frise</string>
    <string name="B1">Ramparts</string>
    <string name="B2">Moat</string>
    <string name="C1">Drawbridge</string>
    <string name="C2">Sally Port</string>
    <string name="D1">Rock Wall</string>
    <string name="D2">Rough Terrain</string>
    <string name="Lowbar">Low Bar</string>

    <!--Questions-->
    <string name="CrossableDefenses">Which defenses can you traverse?</string>
    <string name="challengeTower">Challenge the Tower</string>
    <string name="scaleTower">Scale the Tower</string>
    <string name="holdSallyPort">Hold Sally Port</string>
    <string name="holdDrawBridge">Hold Drawbridge</string>
    <string name="lowGoal">Hit the Low Goal</string>
    <string name="highGoal">Hit the High Goal</string>
    <string name="visionProcessing">Vision processing?</string>
    <string name="treadsOrWheels">Treads or wheels?</string>
    <string name="playDefense">Play defensively</string>
    <string name="playOffense">Play offensively</string>
    <string name="whatFor">What for?</string>
    <string name="numberOfWheels">Number of wheels</string>
    <string name="driveTrain">Drive train</string>
    <string name="breachDefenses">Breach Defenses</string>
    <string name="wheels">Wheels</string>
    <string name="treads">Treads</string>
    <string name="hintTeamScore">Enter Team Score</string>
    <string name="hintMatchNumber">Enter Match Number</string>
    <string name="hintTeamNumber">Enter Team Number</string>
    <string name="teamScore">Team Score</string>
    <string name="defensiveRating">Defensive Rating</string>
    <string name="doesAutonomous">Does Autonomous</string>
    <string name="auto">Autonomous?</string>
    <string name="defensesCrossed">Defenses Crossed</string>
    <string name="challenged">Challenged</string>
    <string name="scaled">Scaled</string>
    <string name="breached">Breached</string>

    <string name="title_about_activity">About</string>
    <string name="close">Close</string>
    <string name="bunnies">Bunnies</string>
    <string name="lines">Lines</string>
    <string name="linesCrossed">Lines Crossed</string>
    <string name="clear_stored_data">Clear stored data</string>
    <string name="use_the_pit_lane">Use the pit lane</string>
    <string name="shoot_darts">Shoot darts</string>
    <string name="bunny_during_auto">Bunny during auto</string>
    <string name="bunny_in_burrow">Bunny in burrow</string>
    <string name="remove_bunnies">Remove bunnies</string>


</resources>