<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              tools:context="org.team2635.scoutnetclient.RobotInfoFragment"
              android:baselineAligned="false">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/driveTrain"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/driveTrain">

            <RadioButton
                android:id="@+id/trainOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="Tank" />

            <RadioButton
                android:id="@+id/trainOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Swerve" />

            <RadioButton
                android:id="@+id/trainOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Slide" />

            <RadioButton
                android:id="@+id/trainOption4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mecanum" />

            <RadioButton
                android:id="@+id/trainOption5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Holonomic" />
        </RadioGroup>


        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfWheels"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:id="@+id/numberOfWheels"
            android:inputType="number"
            android:text="0"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canTheRobot"
            android:textColor="@android:color/black"/>

        <CheckBox
            android:id="@+id/canRetrieveBunnies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Take bunnies from Bucket" />

        <CheckBox
            android:id="@+id/canLiftBucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Pick up Buckets" />

        <CheckBox
            android:id="@+id/canBulldoze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Bulldoze Bunnies" />

        <CheckBox
            android:id="@+id/canLaunchBunnies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Launch Bunnies" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playDefense"
            android:id="@+id/canPlayDefense"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playOffense"
            android:id="@+id/canPlayOffense"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/treadsOrWheels"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/locomotionType">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/treads"
                android:id="@+id/usesTreads"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wheels"
                android:id="@+id/usesWheels"/>
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visionProcessing"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/usesVision">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/visionYes"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/visionNo"/>
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/visionUsage"
            android:hint="@string/whatFor"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/usesAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/autoYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/autoNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autoUsage"
            android:hint="@string/whatFor"/>

    </LinearLayout>

</LinearLayout>
