<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/doesRobotCheckAll"
        android:id="@+id/textView10"
        android:textColor="@android:color/black"/>

    <CheckBox
        android:id="@+id/doesChallengeTower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Steal Bunnies" />

    <CheckBox
        android:id="@+id/doesScaleTower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get Bunnies from Buckets" />

    <CheckBox
        android:id="@+id/doesBreachDefenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bulldoze" />

    <CheckBox
        android:id="@+id/doesHoldSally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shoot" />

    <CheckBox
        android:id="@+id/doesHoldBridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lift Own Bucket" />

    <CheckBox
        android:id="@+id/doesLowGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lift Enemy Bucket" />

    <CheckBox
        android:id="@+id/doesHighGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lift Own Bucket" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playDefense"
        android:id="@+id/isDefensive"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isOffensive"
        android:text="@string/playOffense"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generalStrategyNotes"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/generalStrategyNotes"/>
</LinearLayout>