<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="org.team2635.scoutnetclient.FieldInfoActivity"
              android:orientation="vertical">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doesAutonomous"
        android:id="@+id/matchDoesAutonomous"
        android:layout_gravity="center_horizontal"
        android:checked="false" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lines"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <Space
                android:layout_width="128dp"
                android:layout_height="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center_horizontal"
                android:id="@+id/autoLineAdd"
                android:nestedScrollingEnabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/autoLineNumber"
                android:layout_gravity="center_horizontal"
                android:paddingTop="14dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center_horizontal"
                android:id="@+id/autoLineSub"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bunnies"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView11"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="128dp"
                android:layout_height="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center_horizontal"
                android:id="@+id/autoBunnyAdd"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/autoBunnyNumber"
                android:layout_gravity="center_horizontal"
                android:paddingTop="14dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center_horizontal"
                android:id="@+id/autoBunnySub"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
